brasil, camerun, japon y suiza añadidas

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon"
+    href="https://cdn4.iconfinder.com/data/icons/world-cup-2014-cogged-wheel-style/512/flat_world_cup_icon_512_World_Cup.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mundial Catar 2022</title>
 </head>
